Writing conclusions chapter

--- a/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
@@ -22,4 +22,14 @@ Celem pracy jest opracowanie metody planującej ruch drogowy na skrzyżowaniach 
 W pracy używane będą dwa pojęcia odnoszące się do skrzyżowań: sieć skrzyżowań oraz skrzyżowanie. Skrzyżowanie oznacza przecięcie się dwóch pasów. Sieć skrzyżowań oznacza przecięcia się wielu pasów.
 
 \section{Struktura pracy}
-TODO
+
+W rozdziele 2 przedstawione są istniejące już rozwiązania opisane w literaturze, które koordynują ruch drogowy. Omówione są rozwiązania z użyciem świateł drogowych, a także planowanie ruchu przy użyciu algorytmów planowania. Opisane są także trudności związane z planowaniem ruchu oraz użycie algorytmu A* do planowania ruchu wraz z jego modyfikacjami.
+\newline
+\indent
+W rozdziale 3 przedstawiona jest teza pracy. Znajduje się tam także wstępny opis problemu oraz krótki opis rozwiązania.
+\newline
+\indent
+W rozdziale 4 opisana jest implementacja rozwiązania. Opis ten zawiera informacje na temat przedstawionej w tej pracy zmodyfikowanej wersji algorytmu A*, modułu graficznego, formatu i modelu danych, unikania kolizji oraz funkcji heurystyki.
+\newline
+\indent
+W rozdziale 5 znajdują się wyniki pomiarów wykonane w celu zbadania działania systemu. W rozdziale jest także porównanie opracowanej w pracy metody z rozwiązaniem korzystającym z sygnalizacji świetlnej.
