--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -176,3 +176,8 @@
   pages={76--79},
   year={2014}
 }
+
+@article{slakomy,
+  title={Optymalizacja wielowariantowych planów zarządzania ruchem pojazdów na skrzyżowaniu dróg wielopasmowych},
+  author={Sebastian Łakomy}
+}
