Improving intro chapter

--- a/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
@@ -23,7 +23,7 @@ W pracy używane będą dwa pojęcia odnoszące się do skrzyżowań: sieć skrz
 
 \section{Struktura pracy}
 
-W rozdziele 2 przedstawione są istniejące już rozwiązania opisane w literaturze, które koordynują ruch drogowy. Omówione są rozwiązania z użyciem świateł drogowych, a także planowanie ruchu przy użyciu algorytmów planowania. Opisane są także trudności związane z planowaniem ruchu oraz użycie algorytmu A* do planowania ruchu wraz z jego modyfikacjami.
+W rozdziale 2 przedstawione są istniejące już rozwiązania opisane w literaturze, które koordynują ruch drogowy. Omówione są rozwiązania z użyciem świateł drogowych, a także planowanie ruchu przy użyciu algorytmów planowania. Opisane są także trudności związane z planowaniem ruchu oraz użycie algorytmu A* do planowania ruchu wraz z jego modyfikacjami.
 \newline
 \indent
 W rozdziale 3 przedstawiona jest teza pracy. Znajduje się tam także wstępny opis problemu oraz krótki opis rozwiązania.
@@ -33,3 +33,6 @@ W rozdziale 4 opisana jest implementacja rozwiązania. Opis ten zawiera informac
 \newline
 \indent
 W rozdziale 5 znajdują się wyniki pomiarów wykonane w celu zbadania działania systemu. W rozdziale jest także porównanie opracowanej w pracy metody z rozwiązaniem korzystającym z sygnalizacji świetlnej.
+\newline
+\indent
+W rozdziale 6 znajduje się podsumowanie oraz opis kierunków rozwoju.
