--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -4,14 +4,14 @@
 
 W celu zbadania działania systemu przeprowadzone zostały następujące pomiary:
 \begin{itemize}
-\item pomiar czasu wykonania programu w zależności od liczby samochodów na skrzyżowaniu 
-\item pomiar ilości kroków czasowych po których wszystkie samochody opuszczą skrzyżowania w zależności od liczby samochodów na skrzyżowaniu
+\item Pomiar czasu wykonania programu w zależności od liczby samochodów na skrzyżowaniu 
+\item Pomiar ilości kroków czasowych po których wszystkie samochody opuszczą skrzyżowania w zależności od liczby samochodów na skrzyżowaniu
 \end{itemize}
 
 Pomiary zostały wykonane na dwóch sieciach dróg:
 \begin{itemize}
-\item skrzyżowanie ze sobą ośmiu dróg
-\item skrzyżowanie ze sobą czterech dróg
+\item Skrzyżowanie ze sobą ośmiu dróg
+\item Skrzyżowanie ze sobą czterech dróg
 \end{itemize}
 
 Drogi na obydwu sieciach mają rozmiar 24. Reprezentacja graficzna skrzyżowań jest przedstawiona na rysunku \ref{both-crossroads} z przykładowymi rozmieszczeniami pojazdów.
@@ -59,7 +59,7 @@ Wykresy przedstawiające wyniki na skrzyżowaniu ośmiu dróg zaprezentowane są
 \begin{figure}[H]
   \centering
   \includegraphics[width=1.0\textwidth]{8_roads_execution_time_new.png}
-  \caption{wykres zależności czasu wykonania programu od liczby pojazdów (dla 2-10 pojazdów)}
+  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów (dla 2-10 pojazdów)}
   \label{8_roads_execution_time_new}
 \end{figure}
 \begin{figure}[H]
@@ -71,7 +71,7 @@ Wykresy przedstawiające wyniki na skrzyżowaniu ośmiu dróg zaprezentowane są
 
 \section{Wnioski z pomiarów na skrzyżowaniach czterech i ośmiu dróg}
 
-Wykresy zależności czasu wykonywania względem liczby samochodów na skrzyżowaniu pokazują ograniczenie metody względem liczby samochodów. Jak widać, czas wykonania rośnie ekspotencjalnie względem liczby samochodów. Dla 12 pojazdów czas wykonania przekracza nawet 25 min. Dla sieci skrzyżowań, na której jest 12 lub więcej samochodów użycie metody jest zbyt czasochłonne.
+Wykresy zależności czasu wykonywania względem liczby samochodów na skrzyżowaniu pokazują ograniczenie metody względem liczby samochodów. Jak widać, czas wykonania rośnie ekspotencjalnie względem liczby samochodów. Dla 12 pojazdów czas wykonania przekracza nawet 25 minut. Dla sieci skrzyżowań, na której jest 12 lub więcej samochodów użycie metody jest zbyt czasochłonne.
 \newline
 \indent
 Wykresy zależności liczby kroków czasowych po których wszystkie samochody opuszczą skrzyżowania pokazują, że liczba kroków czasowych rośnie liniowo względem liczby pojazdów. 
