--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -151,7 +151,7 @@
 
 @inproceedings{elhalawany2013modified,
   title={Modified A* algorithm for safer mobile robot navigation},
-  author={ElHalawany, Basem M and Abdel-Kader, Hala M and TagEldeen, Adly and Elsayed, Alaa Eldeen and Nossair, Zaki B},
+  author={El Halawany, Basem M and Abdel-Kader, Hala M and TagEldeen, Adly and Elsayed, Alaa Eldeen and Nossair, Zaki B},
   booktitle={Modelling, Identification \& Control (ICMIC), 2013 Proceedings of International Conference on},
   pages={74--78},
   year={2013},
@@ -179,5 +179,6 @@
 
 @article{slakomy,
   title={Optymalizacja wielowariantowych planów zarządzania ruchem pojazdów na skrzyżowaniu dróg wielopasmowych},
-  author={Sebastian Łakomy}
+  author={Sebastian Łakomy},
+  journal={Master Thesis}
 }
