--- a/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
@@ -1,22 +1,22 @@
 \mychapter{1}{1. Wstęp}
 
-\section{Dziedzina Problemu}
+\section{Dziedzina problemu}
 
 W przedstawionej pracy rozwiązywany jest problem planowania ruchu drogowego na skrzyżowaniach. Koordynacja ruchu na skrzyżowaniach najczęściej zapewniana jest poprzez użycie świateł drogowych. W opisywanej metodzie wykorzystany jest algorytm A*, który najczęściej służy do wyszukiwania najkrótszej ścieżki w grafie. Poruszony jest także problem unikania kolizji. Kolizje w opisywanej metodzie są usuwane na bieżąco podczas działania algorytmu A*.
 \newline
 \indent
-W pracy omówiona jest także trudność planowaniu ruchu w sposób globalny, jaką jest złożoność, która rośnie wraz z rozmiarem środowiska. Przez środowisko, rozumiane są dane opisujące drogi oraz znajdujące się na nich pojazdy wraz z parametrami. Planowanie ruchu na skrzyżowaniach wiąże się z częstymi zmianami środowiska, czyli zmianami położeń pojazdów wraz z innymi parametrami (np. prędkość, przyspieszenie). W związku z tym, system planujący ruch drogowy powinien być w stanie szybko reagować na pomyłki. Pomyłki powinny być natychmiastowo wykrywane, a plan ruchu korygowany.
+W pracy omówiona jest także trudność planowania ruchu w sposób globalny, jaką jest złożoność, która rośnie wraz z rozmiarem środowiska. Przez środowisko, rozumiane są dane opisujące drogi oraz znajdujące się na nich pojazdy wraz z parametrami. Planowanie ruchu na skrzyżowaniach wiąże się z częstymi zmianami środowiska, czyli zmianami położeń pojazdów wraz z innymi parametrami (np. prędkość, przyspieszenie). W związku z tym, system planujący ruch drogowy powinien być w stanie szybko reagować na pomyłki. Pomyłki powinny być natychmiast wykrywane, a plan ruchu korygowany.
 
 \section{Specyfikacja problemu}
 
-Problemem rozwiązywanym w pracy jest szybkie i bezpieczne zaplanowanie ruchu na skrzyżowaniach. Droga oraz czas reprezentowane są w sposób dyskretny. Czas wyrażany jest w krokach czasowych, a długość drogi liczona jest w odcinkach. Metoda rozwiązująca ten problem ma określony stan początkowy, którym jest położenie wszystkich pojazdów wraz z parametrami (prędkość, przyspieszenie) na skrzyżowaniach oraz opis dróg. System zwraca dokładny plan, który prowadzi do bezkolizyjnego opuszczenia przez samochody skrzyżowań. Rozwiązanie problemu polega na znalezieniu kolejnych stanów prowadzących do optymalnego wyniki. Pojedynczy stan można zmienić na wiele sposobów. Dla przykładu, pojazd musi mieć określoną prędkość oraz pozycję na drodze, na której się znajduje. W kolejnych stanach może on zmienić położenie, przyspieszyć, zwolnić lub prędkości nie zmieniać. Duża liczba możliwości zmian pojedynczego stanu oznacza, że w celu znalezienia stanów prowadzących do optymalnego rozwiązania, trzeba przeszukać ich bardzo wiele.
+Problemem rozwiązywanym w pracy, jest szybkie i bezpieczne zaplanowanie ruchu na skrzyżowaniach. Droga oraz czas reprezentowane są w sposób dyskretny. Czas wyrażany jest w krokach czasowych, a długość drogi liczona jest w odcinkach. Metoda rozwiązująca ten problem ma określony stan początkowy, którym jest położenie wszystkich pojazdów wraz z parametrami (prędkość, przyspieszenie) na skrzyżowaniach oraz opis dróg. System zwraca dokładny plan, który prowadzi do bezkolizyjnego opuszczenia przez samochody skrzyżowań. Rozwiązanie problemu polega na znalezieniu kolejnych stanów prowadzących do optymalnego wyniku. Pojedynczy stan można zmienić na wiele sposobów. Dla przykładu, pojazd musi mieć określoną prędkość oraz pozycję na drodze, na której się znajduje. W kolejnych stanach może on zmienić położenie, przyspieszyć, zwolnić lub prędkości nie zmieniać. Duża liczba możliwości zmian pojedynczego stanu oznacza, że w celu znalezienia stanów prowadzących do optymalnego rozwiązania, trzeba przeszukać ich bardzo wiele.
 \newline
 \indent
-Kolejną trudnością w problemie, jest unikanie kolizji. Dla wszystkich możliwości, algorytm planowania powinien usunąć wszystkie kolizje na jednym pasie oraz te przy przekraczaniu przez skrzyżowanie. Unikanie kolizji prowadzi do przeszukiwania wygenerowanych stanów, analizy każdego z pojazdów oraz każdego skrzyżowania dwóch dróg, a następnie usuwania stanów powodujących kolizję.
+Kolejną trudnością w problemie, jest unikanie kolizji. Dla wszystkich możliwości, algorytm planowania powinien usunąć wszystkie kolizje na jednym pasie oraz te, przy przekraczaniu przez skrzyżowanie. Unikanie kolizji prowadzi do przeszukiwania wygenerowanych stanów, analizy każdego z pojazdów oraz każdego skrzyżowania dwóch dróg, a następnie usuwania stanów powodujących kolizję.
 
 \section{Cel}
 
-Celem pracy jest opracowanie metody planującej ruch drogowy na skrzyżowaniach dróg wielopasmowych przy użyciu zmodyfikowanego algorytmu A*. Wynikiem działania metody jest szczegółowy opis, który dokładnie planuje ruch każdego z samochodów w celu bezkolizyjnego opuszczenia skrzyżowania. W rozwiązaniu wzięte pod uwage zostało bezpieczeństwo. Bezpieczeństwo jest zapewniane poprzez wiliczenie wielu wariantów planu, które uwzględniają pomyłki pojazdów. Celem rozwiązania, jest także zapewnienie dużej przepustowości na skrzyżowaniu. Przepustowość rozumiana jest jako ilość samochodów opuszczających skrzyżowanie w jednostce czasu. System zapewnia wyliczenie planu ruchu dla każdej zadanej sieci skrzyżowań oraz każdego stanu początkowego samochodów.
+Celem pracy jest opracowanie metody planującej ruch drogowy na skrzyżowaniach dróg wielopasmowych, przy użyciu zmodyfikowanego algorytmu A*. Wynikiem działania metody jest szczegółowy opis, który dokładnie planuje ruch każdego z samochodów w celu bezkolizyjnego opuszczenia skrzyżowania. W rozwiązaniu wzięte pod uwagę zostało bezpieczeństwo. Bezpieczeństwo jest zapewniane poprzez wyliczenie wielu wariantów planu, które uwzględniają pomyłki pojazdów. Celem rozwiązania, jest także zapewnienie dużej przepustowości na skrzyżowaniu. Przepustowość rozumiana jest jako ilość samochodów opuszczających skrzyżowanie w jednostce czasu. System zapewnia wyliczenie planu ruchu dla każdej zadanej sieci skrzyżowań oraz każdego stanu początkowego samochodów.
 \newline
 \indent
 W pracy używane będą dwa pojęcia odnoszące się do skrzyżowań: sieć skrzyżowań oraz skrzyżowanie. Skrzyżowanie oznacza przecięcie się dwóch pasów. Sieć skrzyżowań oznacza przecięcia się wielu pasów.
