--- a/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
@@ -1,18 +1,18 @@
 \mychapter{3}{3. Teza} \label{chap:thesis}
 
-W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych wraz z wymijaniem kolizji. Rozwiązaniem problemu jest podanie dokładnego planu każdemu pojazdowi. Plan ten opisuje ruch pojazdu - zmienia jego prędkość. Ruch pojazdów musi być bezpieczny. Plany przekazane pojazdom muszą być planami bezkolizyjnymi. Co więcej, system planujący ruch drogowy powinien przewidywać sytuację, w których pojazdy nie dostosują się do planu. Problem zawiera więc w sobie wyliczenie optymalnego planu poruszania się dla każdego pojazdu, usunięcie sytuacji kolizyjnych, a także wyliczenie wielu wariantów planu. Warianty planu powinny przewidywać pomyłki pojazdów i natychmiastowo korygować ruch drogowy. Trudnością w podejściu jest złożoność obliczeniowa. Rozmiar problemu rośnie bardzo szybko względem rozmiaru środowisku. Rozmiarem środowiska jest liczba pojazdów na drogach, a także liczba i długość dróg.
+W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych wraz z wymijaniem kolizji. Rozwiązaniem problemu jest podanie dokładnego planu każdemu pojazdowi. Plan ten opisuje ruch pojazdu - zmienia jego prędkość. Ruch pojazdów musi być bezpieczny. Plany przekazane pojazdom muszą być planami bezkolizyjnymi. Co więcej, system planujący ruch drogowy powinien przewidywać sytuacje, w których pojazdy nie dostosują się do planu. Problem zawiera więc w sobie wyliczenie optymalnego planu poruszania się dla każdego pojazdu, usunięcie sytuacji kolizyjnych, a także wyliczenie wielu wariantów planu. Warianty planu powinny przewidywać pomyłki pojazdów i natychmiastowo korygować ruch drogowy. Trudnością w podejściu jest złożoność obliczeniowa. Rozmiar problemu rośnie bardzo szybko względem rozmiaru środowisku. Rozmiarem środowiska jest liczba pojazdów na drogach, a także liczba i długość dróg.
 \newline
 \indent
-Rozwiązanie w porównaniu do wcześniej opisanych podejść, wyróżnia się użyciem algorytmu A* do dokładnego zaplanowania ruchu dla każdego z pojazdów wraz z unikaniem kolizji. Większość istniejących rozwiązań opiera się o światła drogowe, co wiąże się z opóźnieniami spowodowanymi oczekiwaniem na świetle pomarańczowym, a także opóźnieniami spowodowanymi na oczekiwaniu na świetle czerwonym, kiedy na drodze poprzecznej nie ma żadnych pojazdów.
+Rozwiązanie w porównaniu do wcześniej opisanych podejść, wyróżnia się użyciem algorytmu A* do dokładnego zaplanowania ruchu dla każdego z pojazdów wraz z unikaniem kolizji. Większość istniejących rozwiązań opiera się o światła drogowe. Wiąże się to z opóźnieniami spowodowanymi oczekiwaniem na świetle pomarańczowym, a także opóźnieniami spowodowanymi na oczekiwaniu na świetle czerwonym, kiedy na drodze poprzecznej nie ma żadnych pojazdów.
 \newline
 \indent
-Można postawić tezę: \textbf{zastosowanie metody planującej ruch drogowy przy użyciu algorytmu A* umożliwia zaplanowanie bezkolizyjnego ruchu drogowego dla pojazdów na skrzyżowaniu, co pozwala na osiągnięcie lepszej przepustowości niż w przypadku świateł sekwencyjnych wraz z optymalizacjami.} Przepustowość rozumiemy jako ilość samochodów opuszczających skrzyżowanie w jednostce czasu. Rozwiązanie jest uruchamiane na jednym rdzeniu procesora. Korzystając z większej ilości rdzeni, metoda może policzyć plany dla wielu wariantów. Plany wielowariantowe znajdują zastosowanie w przypadku pomyłki pojazdów, polegającej na niezastosowanie się do wyliczonego planu.
+Można postawić tezę: \textbf{zastosowanie metody planującej ruch drogowy przy użyciu algorytmu A*, umożliwia zaplanowanie bezkolizyjnego ruchu drogowego dla pojazdów na skrzyżowaniu, co pozwala na osiągnięcie lepszej przepustowości niż w przypadku świateł sekwencyjnych wraz z optymalizacjami.} Przepustowość rozumiemy jako ilość samochodów opuszczających skrzyżowanie w jednostce czasu. Rozwiązanie jest uruchamiane na jednym rdzeniu procesora. Korzystając z większej ilości rdzeni, metoda może policzyć plany dla wielu wariantów. Plany wielowariantowe znajdują zastosowanie w przypadku pomyłki pojazdów, polegającej na niezastosowaniu się do wyliczonego planu.
 \newline
 \indent
-Rozwiązanie przyjmuje położenie samochodów na sieci skrzyżowań oraz informacje na temat dróg jako dane wejściowe. Wynikiem jest dokładny plan poruszania się dla każdego z pojazdów. W planie znajdują się informacje o tym z jaką prędkością pojazd powinien się poruszyć, kiedy zwolnić lub przyspieszyć, aby omijać kolizje.
+Rozwiązanie przyjmuje położenie samochodów na sieci skrzyżowań oraz informacje na temat dróg jako dane wejściowe. Wynikiem jest dokładny plan poruszania się dla każdego z pojazdów. W planie znajdują się informacje o tym, z jaką prędkością pojazd powinien się poruszyć, kiedy zwolnić lub przyspieszyć, aby omijać kolizje.
 \newline
 \indent 
-Implementacja algorytmu A* jest generyczna i opiera się na stanach. Algorytm przyjmuje obiekt klasy implementującej metodę zwracającą stany sąsiednie dla stanu aktualnego. Pojedynczym stanem jest rozmieszczenie pojazdów na sieci skrzyżowań wraz z ich prędkościami. Stanem sąsiednim dla aktualnego stanu, jest zmiana pozycji pojazdów na sieci skrzyżowań wraz z ich prędkościami. Do algorytmu przekazywane są także warunki końcowe. Algorytm przeszukuje stany korzystając z funkcji heurystyki, aż osiągnięte zostaną warunki końcowe - nie przeszukiwane są wszystkie możliwe stany. Algorytm A*, moduł graficzny oraz pozostałe elementy systemu zostały napisane w języku Ruby. Algorytm działa w sposób dynamiczny. W przypadku działania algorytmu A* na grafie, z góry znane są krawędzie oraz wierzchołki. W opracowanym rozwiązaniu algorytm dynamicznie tworzy sąsiednie stany.
+Implementacja algorytmu A* jest generyczna i jest oparta na stanach. Algorytm przyjmuje obiekt klasy implementującej metodę zwracającą stany sąsiednie dla stanu aktualnego. Pojedynczym stanem jest rozmieszczenie pojazdów na sieci skrzyżowań wraz z ich prędkościami. Stanem sąsiednim dla aktualnego stanu, jest zmiana pozycji pojazdów na sieci skrzyżowań wraz z ich prędkościami. Do algorytmu przekazywane są także warunki końcowe. Algorytm przeszukuje stany korzystając z funkcji heurystyki, aż osiągnięte zostaną warunki końcowe - nie przeszukiwane są wszystkie możliwe stany. Algorytm A*, moduł graficzny oraz pozostałe elementy systemu zostały napisane w języku Ruby. Algorytm działa w sposób dynamiczny. W przypadku działania algorytmu A* na grafie, z góry znane są krawędzie oraz wierzchołki. W opracowanym rozwiązaniu algorytm dynamicznie tworzy sąsiednie stany.
 \newline
 \indent
 Do algorytmu przekazywana jest funkcja heurystyki, a także warunek końcowy. Dla koordynacji ruchu, warunkiem końcowym jest opuszczenie przez wszystkie pojazdy skrzyżowania. Funkcja heurystyki operuje na danych stanu - każdemu stanowi przypisuje wartość. W przedstawionym rozwiązaniu funkcja heurystyki zwraca najmniejsze wartości dla stanów, w których samochody maksymalnie przyspieszają.
