--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -5,7 +5,7 @@
 W celu zbadania działania systemu przeprowadzone zostały następujące pomiary:
 \begin{itemize}
 \item Pomiar czasu wykonania programu w zależności od liczby samochodów na skrzyżowaniu 
-\item Pomiar ilości kroków czasowych po których wszystkie samochody opuszczą skrzyżowania w zależności od liczby samochodów na skrzyżowaniu
+\item Pomiar ilości kroków czasowych, po których wszystkie samochody opuszczą skrzyżowania w zależności od liczby samochodów na skrzyżowaniu
 \end{itemize}
 
 Pomiary zostały wykonane na dwóch sieciach dróg:
@@ -33,7 +33,7 @@ Pomiary zostały wykonane na następującym sprzęcie:
 
 \section{Wyniki pomiarów dla skrzyżowania czterech dróg}
 
-Zgodnie z wcześniej opisanymi założeniami dla skrzyżowania czterech dróg program został uruchomiony 30 razy dla samochodów ze zbioru \{2, 4, 6, 8, 10, 12\} co razem daje 180 uruchomień.
+Zgodnie z wcześniej opisanymi założeniami dla skrzyżowania czterech dróg, program został uruchomiony 30 razy dla samochodów ze zbioru \{2, 4, 6, 8, 10, 12\} co razem daje 180 uruchomień.
 \newline
 \newline
 Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunku \ref{4_roads_execution_time_new} oraz \ref{four-roads-crossroads-timesteps}
@@ -52,14 +52,11 @@ Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane s
 
 \section{Wyniki pomiarów dla skrzyżowania ośmiu dróg}
 
-Dla skrzyżowania ośmiu dróg też zostało przeprowadzone 180 uruchomień.
-\newline
-\newline
-Wykresy przedstawiające wyniki na skrzyżowaniu ośmiu dróg zaprezentowane są na rysunkach \ref{8_roads_execution_time_new} oraz \ref{8_roads_timesteps_new}
+Dla skrzyżowania ośmiu dróg też zostało przeprowadzone 180 uruchomień. Wykresy przedstawiające wyniki na skrzyżowaniu ośmiu dróg zaprezentowane są na rysunkach \ref{8_roads_execution_time_new} oraz \ref{8_roads_timesteps_new}
 \begin{figure}[H]
   \centering
   \includegraphics[width=1.0\textwidth]{8_roads_execution_time_new.png}
-  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów (dla 2-10 pojazdów)}
+  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów}
   \label{8_roads_execution_time_new}
 \end{figure}
 \begin{figure}[H]
@@ -74,14 +71,14 @@ Wykresy przedstawiające wyniki na skrzyżowaniu ośmiu dróg zaprezentowane są
 Wykresy zależności czasu wykonywania względem liczby samochodów na skrzyżowaniu pokazują ograniczenie metody względem liczby samochodów. Jak widać, czas wykonania rośnie ekspotencjalnie względem liczby samochodów. Dla 12 pojazdów czas wykonania przekracza nawet 25 minut. Dla sieci skrzyżowań, na której jest 12 lub więcej samochodów użycie metody jest zbyt czasochłonne.
 \newline
 \indent
-Wykresy zależności liczby kroków czasowych po których wszystkie samochody opuszczą skrzyżowania pokazują, że liczba kroków czasowych rośnie liniowo względem liczby pojazdów. 
+Wykresy zależności liczby kroków czasowych, po których wszystkie samochody opuszczą skrzyżowania pokazują, że liczba kroków czasowych rośnie liniowo względem liczby pojazdów. 
 \newline
 \indent
 Liczba kroków czasowych na skrzyżowaniu ośmiu dróg jest mniejsza niż na skrzyżowaniu czterech dróg. Spowodowane jest to tym, że na skrzyżowaniu czterech dróg auta stoją jedno za drugim na pasach, bez wolnej przestrzeni przed sobą. W porównaniu do skrzyżowaniu ośmiu dróg, auta mogą swobodnie poruszać się na pasie i częściej wymijają kolizję na skrzyżowaniu.
 
 \section{Prawdopodobieństwo kolizji}
 
-W celu przetestowania bezpieczeństwa rozwiązania zostały przeprowadzone pomiary prawdopodobieństwa kolizji w przypadku pomyłek pojazdów. Pomyłka polega na niezastosowaniu się pojazdu do planu. W rozwiązaniu zaimplementowane zostało symulowanie kolizji pojazdów z określonym prawdopodobieństwem. W każdym kroku czasowym każdy z pojazdów myli się z podanym wcześniej prawdopodobieństwem. Wynikiem pomiarów jest zależność prawdopodobieństwa kolizji od prawdopodobieństwa pomyłki. Zmierzone zostało prawdopodobieństwo kolizji w razie pomyłek pojazdów z następującymi prawdopodobieństwami \{0.001, 0.005, 0.01\}
+W celu przetestowania bezpieczeństwa rozwiązania, zostały przeprowadzone pomiary prawdopodobieństwa kolizji w przypadku pomyłek pojazdów. Pomyłka polega na niezastosowaniu się pojazdu do planu. W rozwiązaniu zaimplementowane zostało symulowanie kolizji pojazdów z określonym prawdopodobieństwem. W każdym kroku czasowym, każdy z pojazdów myli się z podanym wcześniej prawdopodobieństwem. Wynikiem pomiarów jest zależność prawdopodobieństwa kolizji od prawdopodobieństwa pomyłki. Zmierzone zostało prawdopodobieństwo kolizji w razie pomyłek pojazdów z następującymi prawdopodobieństwami \{0.001, 0.005, 0.01\}
 \newline
 \indent
 W obliczeniach pod uwagę wzięty został także parametr bezpieczeństwa. Pomiary zostały wykonane dla skrzyżowania 8 dróg, na których znajdowało się 10 pojazdów. Program uruchomiony został 30 razy dla parametru bezpieczeństwa równego 0 oraz 30 razy dla parametru bezpieczeństwa równego 1, aby pokazać jakie bezpieczeństwo gwarantuje użycie parametru bezpieczeństwa.
@@ -118,13 +115,13 @@ Jak pokazują wyniki w tabelach \ref{firstCollision}, \ref{secondCollision} para
 
 \section{Porównanie wyników z rozwiązaniem ze światłami drogowymi}
 
-W celu zweryfikowania szybkości podejścia z wykorzystaniem algorytmu A*, pomiary zostały porównane z rozwiązaniem polegającym na optymalizacji świateł drogowych przedstawionym w pracy \cite{slakomy}. Porównywane rozwiązanie także jest oparte o kroki czasowe. Drogi także są dyskretne, mierzone w odcinach, a prędkość też mierzona jest w ilości odcinków drogi na krok czasowy.
+W celu zweryfikowania szybkości podejścia z wykorzystaniem algorytmu A*, wyniki zostały porównane z rozwiązaniem polegającym na optymalizacji świateł drogowych przedstawionym w pracy \cite{slakomy}. Porównywane rozwiązanie także jest oparte o kroki czasowe. Drogi także są dyskretne, mierzone w odcinach, a prędkość też mierzona jest w ilości odcinków drogi na krok czasowy.
 \newline
 \indent
-Rozwiązania różnią się modelami danych, które reprezentują skrzyżowania oraz znajdujące się na nich pojazdy. W jednym rozwiązaniu położenie i droga aut jest określona za pomocą grafu oraz wierzchołków grafu, przez które auta będą przechodzić. W opisywanym w tej pracy rozwiązaniu drogi są opisywane poprzez ich rozmiar oraz przecięcia z innymi drogami. Położenia samochodów natomiast poprzez numer drogi oraz numer odcinka drogi na której się znajdują.
+Rozwiązania różnią się modelami danych, które reprezentują skrzyżowania oraz znajdujące się na nich pojazdy. W jednym rozwiązaniu położenie i droga aut jest określona za pomocą grafu oraz wierzchołków grafu, przez które auta będą przechodzić. W opisywanym w tej pracy, rozwiązaniu drogi są opisywane poprzez ich rozmiar oraz przecięcia z innymi drogami. Położenia samochodów natomiast poprzez numer drogi oraz numer odcinka drogi na której się znajdują.
 \newline
 \indent
-Wykonując pomiary uzgodnione zostały wspólne warunki w obu rozwiązaniach tak, aby można było porównać rozwiązania. Porównywane są kroki czasowe, po których wszystkie auta opuszczą skrzyżowanie. Wspólne warunki są następujące:
+Wykonując pomiary, uzgodnione zostały wspólne warunki w obu rozwiązaniach tak, aby można było je porównać. Porównywane są kroki czasowe, po których wszystkie auta opuszczą skrzyżowanie. Wspólne warunki są następujące:
 \begin{itemize}
 \item Maksymalna prędkość samochodów wynosi 4 odcinki drogi na krok czasowy
 \item Wartości przyspieszeń pojazdów są następujące: \{-1, 0, 1\}
