--- a/project_description/new_latex_documentation/msc-docs-template/6-conclusions.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/6-conclusions.tex
@@ -2,10 +2,10 @@
 
 \section {Podsumowanie}
 
-W pracy przedstawiona została metoda planowania ruchu drogowego z wykorzystaniem algorytmu A*. Algorytm A* został zmodyfikowany - jest on generyczny, operuje na stanach oraz dynamicznie przeszukuje stany. Implementacja algorytmu nie przeszukuje także całej przestrzeni stanów - algorytm kończy działanie w przypadku znalezienia pierwszego rozwiązania.
+W pracy przedstawiona została metoda planowania ruchu drogowego z wykorzystaniem algorytmu A*. Algorytm A* został zmodyfikowany - jest on generyczny, operuje na stanach oraz dynamicznie je przeszukuje. Implementacja algorytmu nie przeszukuje także całej przestrzeni stanów - algorytm kończy działanie w przypadku znalezienia pierwszego rozwiązania.
 \newline
 \indent
-Analizując wyniki przedstawione w rozdziale 5 można wnioskować, że teza przedstawiona w rozdziale 3 jest prawdziwa. Porównanie opisywanej w tej pracy metody wraz z koordynacją ruchu przy użyciu świateł drogowych pokazuje, że metoda daje lepsze wyniki, jeżeli chodzi o przepustowość. W przedstawionej metodzie, zapewnione jest także rozwiązywanie kolizji oraz bezpieczeństwo w przypadku niezastosowania się pojazdów do planu. Rozwiązanie zostało zaprojektowane i uruchamiane na jednym wątku procesora. Używając więcej wątków, można liczyć plany wielowariantowe w celu szybkiej reakcji na pomyłki pojazdów.
+Analizując wyniki przedstawione w rozdziale 5 można wnioskować, że teza przedstawiona w rozdziale 3 jest prawdziwa. Porównanie opisywanej w tej pracy metody, wraz z koordynacją ruchu przy użyciu świateł drogowych pokazuje, że metoda daje lepsze wyniki, jeżeli chodzi o przepustowość. W przedstawionej metodzie, zapewnione jest także rozwiązywanie kolizji oraz bezpieczeństwo w przypadku niezastosowania się pojazdów do planu. Rozwiązanie zostało zaprojektowane i uruchamiane na jednym wątku procesora. Używając więcej wątków, można liczyć plany wielowariantowe w celu szybkiej reakcji na pomyłki pojazdów.
 \newline
 \indent
 Jak pokazują wyniki, zastosowanie metody do koordynacji ruchu na skrzyżowaniu ze sobą ośmiu dróg zaoszczędza 20-40\% kroków czasowych. Korzystając z metody dla większej ilości sieci skrzyżowań, można zaoszczędzić dużo czasu.
