--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -180,5 +180,5 @@
 @article{slakomy,
   title={Optymalizacja wielowariantowych planów zarządzania ruchem pojazdów na skrzyżowaniu dróg wielopasmowych},
   author={Sebastian Łakomy},
-  journal={Master Thesis}
+  journal={Master Thesis AGH, 2016}
 }
