--- a/project_description/new_latex_documentation/msc-docs-template/6-conclusions.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/6-conclusions.tex
@@ -15,4 +15,4 @@ Z pewnością wadą metody jest złożoność obliczeniowa, która rośnie ekspo
 
 \section{Kierunki rozwoju}
 
-Metoda została zaprojektowana i uruchamiana na jednym wątku procesora. Głównym kierunkiem rozwoju jest liczenie planów wielowariantowych na wielu wątkach procesora. Mając równolegle wyliczane plany wielowariantowe, można następnie symulować pomyłki pojazdów, które polegają na niezastosowaniu się do planu głównego. Następnie, w przypadku takiej pomyłki pojazdu wykrywać ją i wysyłać pojazdom poprawiony plan ruchu. Mając wprowadzone takie zmiany, można kolejno policzyć prawdopodobieństwa kolizji w zależności od prawdopodobieństwa pomyłki pojedynczego pojazdu oraz minimalizować prawdopodobieństwo kolizji poprzez modyfikację parametru bezpieczeństwa.
+Metoda została zaprojektowana i uruchamiana na jednym wątku procesora. Głównym kierunkiem rozwoju jest liczenie planów wielowariantowych na wielu wątkach procesora. Mając równolegle wyliczane plany wielowariantowe, można następnie symulować pomyłki pojazdów, które polegają na niezastosowaniu się do planu głównego. Następnie, w przypadku takiej pomyłki pojazdu wykrywać ją i wysyłać pojazdom poprawiony plan ruchu. Mając wprowadzone takie zmiany, można kolejno policzyć prawdopodobieństwa kolizji w zależności od prawdopodobieństwa pomyłki pojedynczego pojazdu oraz minimalizować prawdopodobieństwo kolizji, poprzez modyfikację parametru bezpieczeństwa.
